--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
-  "engines": {"node": "10.14.2"},
+  "engines": {
+    "node": "10.14.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.14"
   },
